tests/sksl/errors/VectorSlice.glsl
### Compilation failed:

error: 7: 'half4' is not a valid parameter to 'half3' constructor; use '.xyz' instead
error: 8: 'half4' is not a valid parameter to 'half2' constructor; use '.xy' instead
error: 9: 'half4' is not a valid parameter to 'half' constructor; use '.x' instead
error: 12: 'int4' is not a valid parameter to 'int3' constructor; use '.xyz' instead
error: 13: 'int4' is not a valid parameter to 'int2' constructor; use '.xy' instead
error: 14: 'int4' is not a valid parameter to 'int' constructor; use '.x' instead
error: 17: 'bool4' is not a valid parameter to 'bool3' constructor; use '.xyz' instead
error: 18: 'bool4' is not a valid parameter to 'bool2' constructor; use '.xy' instead
error: 19: 'bool4' is not a valid parameter to 'bool' constructor; use '.x' instead
9 errors
